--- a/paralax.css
+++ b/paralax.css
@@ -1,42 +1,68 @@
-*{
-    font-family: Roboto, serif;
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
-}
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 1rem;
+  }
 
-section {
-height: 100vh;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-}
+  nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
 
-.section1 {
-background-color: #fff;
-color: #000;
-}
+  nav li {
+    display: inline-block;
+    margin-right: 1rem;
+  }
 
-.section2 {
-background-color: #000;
-color: #fff;
-}
+  nav a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+  }
 
-.section3 {
-background-color: #fff;
-color: #000;
-}
-
-.section4 {
-background-color: #000;
-color: #fff;
-}
-
-/* Efeitos Parallax */
-.parallax1 {
-background-image: url('imagens/foto1.jpg');
-background-attachment: fixed;
-background-position: center;
-background
-}
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .header {
+    height: 100vh;
+    background-image: url('header-bg.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    text-shadow: 0 0 10px #000;
+  }
+  
+  .header h1 {
+    font-size: 4rem;
+    margin: 0;
+  }
+  
+  .section {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    text-shadow: 0 0 10px #000;
+  }
+  
+  .section:nth-child(even) {
+    background-color: #000;
+  }
+  
+  .section:nth-child(odd) {
+    background-color: #fff;
+  }
+  
+  .section h2 {
+    font-size: 3rem;
+    margin: 0;
+  }
