--- a/portefolio/style.css
+++ b/portefolio/style.css
@@ -70,9 +70,10 @@ article {
     margin-top: 50px;
     margin-bottom: 50px;
     padding: 20px;
-    background-color: #f2f2f2;
     font-family: Arial, sans-serif;
     font-size: 18px;
+    color: white;
+
     line-height: 1.5;
     text-align: justify;
 }
@@ -83,7 +84,7 @@ article {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #fff;
+    color: white;
     font-size: 48px;
     text-align: center;
     font-family: Arial, sans-serif;
